[package]
name = "gnews-rs"
version = "1.1.2"
edition = "2021"
authors = ["Brandon Gill <brandongill123@gmail.com>"]
categories = ["encoding", "web-programming", "parsing"]
description = "A simple Google News RSS feed parser"
keywords = ["gnews-rs", "gnews", "news", "rss", "google"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pgxtips/gnews-rs"

[lib]
name = "gnews_rs"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
reqwest = "0.11.23"
rss = { version="2.0.6" }
serde = { version="1.0.195", features=["derive"] }
serde_json = "1.0.111"
tokio = { version="1.35.1", features=["macros", "rt-multi-thread"] }
